# greenlit-takehome

./: .env  README.md  pyproject.toml
simplecrud/: database.py  main.py  models.py
simplecrud/crud/: company_crud.py  film_crud.py  user_crud.py  user_role_crud.py
simplecrud/routers/: company_router.py  film_router.py  user_roles_router.py  user_router.py
simplecrud/schemas/: company.py  film.py  user.py
