[tool.poetry]
name = "simplecrud"
version = "0.1.0"
description = "Simple CRUD API project"
authors = ["Murari Sahu <murarisahdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
sqlalchemy = "^2.0.27"
uvicorn = "^0.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
